--- a/Bookmark Page/input.css
+++ b/Bookmark Page/input.css
@@ -10,8 +10,10 @@
 }
 
     .black-btn{
-        @apply text-base duration-200 border-2 rounded-sm hover:bg-black text-center hover:text-white px-6 py-2 border-black;
+        @apply text-base duration-200 border-2 rounded-sm hover:bg-black text-center hover:text-white px-6 py-2 dark:border-white
+        dark:hover:bg-white dark:hover:text-black border-black;
     }
+
 
 
 
